# wikibot

./: .dockerignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: code-analysis.yml
src/: citations.py  exceptions.py  wikibot.py
test_wiki/: file.md
